y.output
State 4 conflicts: 1 shift/reduce


Grammar

    0 $accept: T $end

    1 T: S 'other' 'things'

    2 S: x S x
    3  | x

    4 x: NUM
    5  | x OP NUM


Terminals, with rules where they appear

$end (0) 0
'other' (111) 1
'things' (116) 1
error (256)
NUM (258) 4 5
OP (259) 5


Nonterminals, with rules where they appear

$accept (7)
    on left: 0
T (8)
    on left: 1, on right: 0
S (9)
    on left: 2 3, on right: 1 2
x (10)
    on left: 4 5, on right: 2 3 5


state 0

    0 $accept: . T $end

    NUM  shift, and go to state 1

    T  go to state 2
    S  go to state 3
    x  go to state 4


state 1

    4 x: NUM .

    $default  reduce using rule 4 (x)


state 2

    0 $accept: T . $end

    $end  shift, and go to state 5


state 3

    1 T: S . 'other' 'things'

    'other'  shift, and go to state 6


state 4

    2 S: x . S x
    3  | x .
    5 x: x . OP NUM

    NUM  shift, and go to state 1
    OP   shift, and go to state 7

    NUM       [reduce using rule 3 (S)]
    $default  reduce using rule 3 (S)

    S  go to state 8
    x  go to state 4


state 5

    0 $accept: T $end .

    $default  accept


state 6

    1 T: S 'other' . 'things'

    'things'  shift, and go to state 9


state 7

    5 x: x OP . NUM

    NUM  shift, and go to state 10


state 8

    2 S: x S . x

    NUM  shift, and go to state 1

    x  go to state 11


state 9

    1 T: S 'other' 'things' .

    $default  reduce using rule 1 (T)


state 10

    5 x: x OP NUM .

    $default  reduce using rule 5 (x)


state 11

    2 S: x S x .
    5 x: x . OP NUM

    OP  shift, and go to state 7

    $default  reduce using rule 2 (S)
